Edited wiki page through web user interface.

--- a/wiki/EC2.wiki
+++ b/wiki/EC2.wiki
@@ -16,7 +16,7 @@ Instructions:
   * Get Drupal 6.4 install (An installation profile or just a SVN link would do the trick)
   * (Optional) Setup exim email client if you want email notifications
     ** Install and Setup exim4: http://borisbrodsky.com/2007/12/ubuntu-relay-email-server-thro-11.html
-    ** Edit authorization credentials in /etc/exim4/passwd.client (*:username:password)
+    ** Edit authorization credentials in /etc/exim4/passwd.client (`*`:username:password)
   * Get current Ourmedia theme and modules from SVN
   * Get current Ourmedia test database, available in root of SVN trunk
   * Play!
