--- a/wiki/DevelopmentSandboxes.wiki
+++ b/wiki/DevelopmentSandboxes.wiki
@@ -1,6 +1,6 @@
 #summary Development sandboxes and distributions
 
-= Introduction =Eric's been working on a sample database for the ourmedia beta.  He submitted it to the source tree and I will add one to the downloads when it is ready.
+Eric's been working on a sample database for the ourmedia beta.  He submitted it to the source tree and I will add one to the downloads when it is ready.
 
 I just added a zipped version of the sites/all folder to downloads and committed the beta versions of our custom mods and theme to the source codie repository under svn/trunk/beta.
 
