--- a/wiki/DevelopmentSandboxes.wiki
+++ b/wiki/DevelopmentSandboxes.wiki
@@ -19,3 +19,16 @@ See http://code.google.com/p/ourmedia3/downloads/list
 == Distribution ==
 
 Ultimately, I would like to create a Drupal distribution profile.
+
+== General Installation Notes ==
+
+You will need to 
+
+# create a mysql database for the ourmedia site (CREATE DATABASE OM)
+# download, untar and import the sample database (\. ~/omdev.sql)
+# download and untar drupal
+# download and untar ourmedia_all.tar.gz
+# edit sites/default/settings.php to set db_urls and base_urls
+
+Notes:
+* menus and content still reference beta.ourmedia.org
