--- a/wiki/UploaderNotes.wiki
+++ b/wiki/UploaderNotes.wiki
@@ -11,7 +11,7 @@ Currently, the service allows anyone to upload a single media file to archive.or
 d=dave, e=eric, g=gus, m=markus denotes who comment/question is best directed to.  + denotes higher priority
 
 ==Notes==
-  * all additional pro services: transcode, distribute to several hosting services, save to archive, public/private sharing of files, download page, ads/revenue, ssl extra?
+  * all additional pro services (or subscription): transcode, distribute to several hosting services, save to archive, public/private sharing of files, download page, ads/revenue, ssl extra?
 
   * de brand spinxpress uploader or ezuploader or what?
   * de open source the server side of upload service?
@@ -39,22 +39,21 @@ d=dave, e=eric, g=gus, m=markus denotes who comment/question is best directed to
   * m upload block to show helpful information (use adv help?) (first pass is done)
   * m add CAPTCHA to upload form?
   * m allow prefill of keywords and other metadata from channels?
-  * m anti-spam flags: +1 for each upload in last hour, +1 for each day since user create date, +1 for each upload prior to today
+  * m anti-spam flags: +1 for each upload in last hour, +1 for each day since user create date, +1 for each upload prior to submission date, etc
   * m call local javascript as much as possible
-  * m filter for [ezuploader] for use in channels?
+  * m input filter for [ezuploader] for easy use in channels?
   * m have jay, ry, cheryl test
-  * m+ instead of assigning styles, assign classes
-  * m make work on beta (module)
+  * m+ instead of assigning styles, assign classes (e.g., colors)
+  * m make work on beta (module) Done. first pass at simple module to wrap service on beta now.
   * m more testing of theming
   * m+ move select to our own form, not CC?  Better performance.
   * m pro version: add uploader to your own blog with redirects to your own blog.  embed? upload-in-a-box for channels, members, specific site
   * m upload options: our new form, spinxpress client, ftp client, cc pulisher, blip uploader, others?
-  * m paid/pro/subscription version
-  * m+ archive sync progress meter
-  * m+ add submit handler to add user
-  * m+ add general instructions. add instructions on how to get archive library card
+  * m+ archive.org sync progress meter
+  * m+ add submit handler to add user if not already a member
+  * m+ add general instructions. add instructions on how to get archive library card (new block in place for this)
   * m+ privacy policy and link
-  * m+ handle archive errors
+  * m+ handle (relay) archive.org errors
   * m+ separate Ourmedia logic from module so as to be generic
 
   * m+ beta bug found while testing: clean up comment links on media page
