Edited wiki page through web user interface.

--- a/wiki/UploaderNotes.wiki
+++ b/wiki/UploaderNotes.wiki
@@ -3,6 +3,8 @@
 (please pardon any misunderstandings, this is early draft based on first use)
 
 ==Summary==
+#summary Notes on new uploader service and module
+
 Eric Zimmerman has created an http-based, uploader service for use with archive.org.  Markus Sandy has created a Drupal module that integrates that service into Ourmedia.
 
 Currently, the service allows anyone to upload a single media file to archive.org.  The module displays the form uses a customizable drupal template to display the form at url designated via Drupal administration screens (default is 'upload').  The target archive.org collection can be set (default is 'ourmedia').   The module also manages the inclusion of scripts and style sheets and autofills the current user's email address into the upload form (and assists them in logging in first if needed).
